k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devsecops-app
  template:
    metadata:
      labels:
        app: devsecops-app
    spec:
      containers:
      - name: app
        image: europe-west3-docker.pkg.dev/crack-willow-460419-n9/hello-app/devsecops-app:latest
        ports:
        - containerPort: 5000
