k8s/allowedrepos-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[i]
          not valid_image(container.image)
          msg := sprintf("image '%v' is not from an allowed repository", [container.image])
        }

        valid_image(img) {
          some i
          startswith(img, input.parameters.repos[i])
        }
